data/derived/sp14/progs/unify/prog3479.ml.out
Characters 86-90:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type float but an expression was expected of type
         'a -> float -> float
